Moved "wrap" to fix page loading

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -108,11 +108,6 @@ body p {
   }
 }
 
-/* .welcome-page {
-
-	background-color: black;
-
-} */
 
 .banner {
 	  
@@ -337,6 +332,14 @@ h1 {
 	text-decoration: none;
 }
 
+.wrap {
+	border-style: solid;
+	border-color: #ededed;
+	border-width: 0.15rem;
+	background-color: #fcfcfc;
+	
+}
+
 .columnpics {
   opacity: 1;
   transition: .5s ease;
@@ -388,17 +391,24 @@ h1 {
   text-align: left;
   margin-left: 5%;
   margin-right: 3%;
-  
 
 } 
 
-.wrap {
-	border-style: solid;
-	border-color: #ededed;
-	border-width: 0.15rem;
-	background-color: #fcfcfc;
-	
+.columntext h3 {
+
+  font-size: calc(18px + 0.5vw);
+  font-style: bold;
 }
+
+.columntext h3:hover {
+
+	color: #C83C92;
+}
+
+.columntext p {
+	font-size: calc(14px + 0.5vw);
+}
+
 
 .tags {
 
@@ -454,21 +464,6 @@ h1 {
   position: absolute;
   right: 0;
   top: 0;
-}
-
-.columntext h3 {
-
-  font-size: calc(18px + 0.5vw);
-  font-style: bold;
-}
-
-.columntext h3:hover {
-
-	color: #C83C92;
-}
-
-.columntext p {
-	font-size: calc(14px + 0.5vw);
 }
 
 .about-body {
